# TWIG-KV

./: .gitmodules  CMakeLists.txt  README.md  config.json
config/: cloudlab_machines.xml  config.json  ops_config.json
setup/: .gitignore  check_freq.py  config.xml  create_mixed_workload.sh  create_second_node_only_workload.cpp  create_ycsb_workload.sh  klatency.py  klatency_all.py  metrics_summary.csv  metrics_summary_throughput_sorted.csv  results.txt  run.py  run.sh  run_compile.sh  run_mac.sh  run_test.sh  setup.py
src/: CMakeLists.txt  access_rate_calculations.cpp  access_rate_calculations.h  async_rdma.h  cal_latency.py  config.json  connection.cpp  connection.h  dataset.cpp  defines.h  globals.h  hotspot_cdf.txt  ldc.cpp  ldc.h  op  operations.cpp  operations.h  packet.capnp  packet.capnp.c++  packet.capnp.h  rdma_reads.cpp  rdma_server.cpp  test  test_cdf  test_cdf.cpp  uniform_cdf.txt  zipfian_cdf.txt
workload/: Makefile  common.h  config.mk  dataset.cpp  dataset.txt  main  main.cpp  operations  operations.cpp  operations.h  sendIO.cpp
